<resources>

    //LOGIN SCREEN STRING
    <string name="app_name">PennyWise</string>
    <string name="login_text">LOGIN</string>
    <string name="Sign_msg">Sign in to PennyWise.</string>
    <string name="email_tb">   Email</string>
    <string name="pass_tb">   Password</string>
    <string name="forgot">Forgot Password?</string>
    <string name="login_btn">LOGIN</string>
    <string name="acc_qts">Don\'t have an account yet? Sign up</string>


    <!--    //REGISTER SCREEN STRING-->
    <string name="rg_msg">REGISTER</string>
    <string name="reg_desc">Create an account.</string>
    <string name="reg_email_tb">   Email</string>
    <string name="reg_pass_tb">   Password</string>
    <string name="reg_confirm_tb">   Confirm Password</string>
    <string name="create_btn">CREATE</string>
    <string name="qts_reg">Already have an account? Login.</string>

    <!--    //FORGOT PASSWORD SCREEN STRING-->
    <string name="fg_back">Back</string>
    <string name="fg_forgot">Forgot</string>
    <string name="fg_pass">Password</string>
    <string name="fg_newPass">New Password</string>
    <string name="fg_guide">Enter your email or username and we\'ll send you a\nlink to change your password</string>
    <string name="fg_hint">   pennywise@gmail.com</string>
    <string name="fg_send">SEND</string>

    <!--VERIFY SCREEN STRING-->
    <string name="ver_msg">Verify</string>
    <string name="ver_email">Email</string>
    <string name="ver_sentmsg">We have sent you an email to verify your\naccount.</string>


    <!--DASHBOARD SCREEN STRING-->
    <string name="dash_welbk">Welcome back</string>
    <string name="dash_pw">Penny Wise</string>
    <string name="dash_total">P0.00</string>
    <string name="ex_sum">Expense Summary</string>
    <string name="cred_num">000-000-0000</string>
    <string name="dash_search">Search items</string>
    <string name="dash_budget">Budget</string>
    <string name="dash_expense">Expense</string>
    <string name="dash_cat">Category</string>

    //Temporary array for dropdown
    <string-array name="dropdown_options">
        <item> </item>
        <item>Travel</item>
        <item>Food</item>
        <item>Accommodation</item>
    </string-array>


    //Budget Planning
    <string name="BudP_title">Budget Planning</string>
    <string name="BudP_amt">Budget Amount</string>
    <string name="BudP_notes">Notes</string>
    <string name="BudP_notesHint">Enter your notes here</string>
    <string name="BudP_btn">ADD PLAN</string>


    //Expense
    <string name="Exp_name">Expense Name</string>
    <string name="Exp_amt">Amount</string>
    <string name="Exp_desc">Description</string>
    <string name="Exp_btn">SUBMIT</string>

    //Category
    <string name="Cat_name">Category Name</string>
    <string name="Cat_icons">Category Icons:</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    //Navigators
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>
</resources>
