<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="user_authentication.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/login_text"
        android:textColor="@color/red"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/Sign_msg"
        android:textColor="@color/red"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:hint="@string/email_tb"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:background="@drawable/text_box"
        android:textColorHint="@color/red" />

    <!-- Password field with toggle -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/text_box">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/eye_icon"
            android:layout_toStartOf="@+id/eye_icon"
            android:hint="@string/pass_tb"
            android:inputType="textPassword"
            android:padding="10dp"
            android:background="@android:color/transparent"
            android:textColorHint="@color/red" />

        <ImageView
            android:id="@+id/eye_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_eye_closed"
            android:contentDescription="Toggle Password Visibility"
            android:clickable="true" />
    </RelativeLayout>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="end"
        android:text="@string/forgot"
        android:textColor="@color/red"
        android:textSize="14sp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/buttons"
        android:text="@string/login_btn"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/signup_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/acc_qts"
        android:textColor="@color/red"
        android:textSize="14sp" />

</LinearLayout>
