<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/auth_bg"
    tools:context=".Register">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="290dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/register_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rg_msg"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@color/red"
            android:gravity="center"
            android:layout_centerInParent="true" />

        <TextView
            android:id="@+id/reg_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_desc"
            android:textSize="10sp"
            android:textColor="@color/red"
            android:layout_below="@+id/register_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="35dp"
            android:layout_marginRight="35dp"
            android:textColor="@color/red"
            android:text="@string/reg_email_tb"
            android:background="@drawable/text_box"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="20dp"
            android:text="@string/reg_pass_tb"
            android:textColor="@color/red"
            android:layout_below="@+id/email"
            android:background="@drawable/text_box"/>
        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="20dp"
            android:text="@string/reg_confirm_tb"
            android:textColor="@color/red"
            android:layout_below="@+id/password"
            android:background="@drawable/text_box"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/create_button"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/create_btn"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/buttons"
            android:layout_centerInParent="true"
            />

        <TextView
            android:id="@+id/login_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/qts_reg"
            android:layout_below="@+id/create_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:textColor="@color/red"
            />

    </RelativeLayout>
</LinearLayout>