<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg2"
    tools:context="user_authentication.VerifyEmail">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/back_arrow"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fg_back"
            android:textColor="#FF0000"
            android:textSize="16sp"
            android:paddingStart="4dp" />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp">

        <TextView
            android:id="@+id/forgot_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/ver_msg"
            android:textColor="@color/red"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:textColor="@color/red"
            android:fontFamily="monospace"
            android:layout_below="@+id/forgot_text"
            android:text="@string/ver_email"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_text"
            android:textColor="@color/red"
            android:fontFamily="sans-serif-medium"
            android:textSize="12sp"
            android:text=""
            />

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/verification"/>

    <TextView
        android:id="@+id/desc_instruct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:textSize="14sp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/ver_sentmsg"
        />

</LinearLayout>